Correction contrast titre dans les section colors

--- a/src/styles/components/_sections.scss
+++ b/src/styles/components/_sections.scss
@@ -158,15 +158,6 @@ figure{
   margin: 0;
   border-left:6px solid $white;
 }
-blockquote{
-  margin: 0;
-}
-.citation {
-  font-size: 25px;
-  font-weight: 600;
-  line-height: 110%;
-  margin-left: 0;
-}
 
 
 @media (min-width: $desktop){
